--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@ body.light-theme .theme-label {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #696969; /* задній фон */
+    background-color: #000000; /* задній фон темного режиму */
     transition: 0.4s;
     border-radius: 24px;
 }
@@ -268,6 +268,7 @@ body.light-theme .theme-label {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     color: #D3D3D3; /* кольор напису */
+    border: 1px solid #1E90FF;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
