--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ input:checked + .slider:after {
 .slider:before {
     position: absolute;
     content: "";
-    height: 20px; /* Зменшено з 26px */
+    height: 14px; /* 20px */
     width: 14px; /* Зменшено з 26px */
     left: 1px; /* Початкове положення */
     bottom: 5px; /* 3 */
