--- a/styles.css
+++ b/styles.css
@@ -442,7 +442,7 @@ input:checked + .slider:before {
     font-weight: 300;
     font-family: 'Montserrat', sans-serif;
     -webkit-tap-highlight-color: transparent;
-    color: #FFFF00;
+    color: #FFFFFF;
     letter-spacing: 5px;
     cursor: pointer;
     transition: all 0.3s ease;
